Change colour of hamburger. Introduce nav tag. Fix misaligned div tags.

--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,10 @@ div.rightdivLeftpad {
   text-shadow: none;
 }
 
+.navbar .icon-bar{
+  background-color: #000
+ }
+
 .small-img-row {
   margin-bottom: 10px;
 }
